# Artemis

./: CMakeLists.txt  LICENSE  ReadMe.md  cpplint.sh  package.xml
.github/workflows/: build_and_coveralls.yml
action/: Task.action
config/: controllers.yaml
docs/: Doxyfile
include/Artemis/: aruco_detector.hpp  move_base_action_wrapper.hpp  navigator.hpp  pick_and_place.hpp  task_action_client.hpp  task_action_server.hpp  wms_service_client.hpp  wms_service_server.hpp
launch/: artemis.launch  artemis_servers.launch  gazebo.launch
maps/: small_warehouse.pgm  small_warehouse.yaml  small_warehouse_cargo.pgm  small_warehouse_cargo.yaml
models/aruco_box/aruco_box/: model.config  model.sdf
models/aruco_box_1/: model.config  model.sdf
models/aruco_box_1/materials/scripts/: marker.material
models/aruco_box_2/: model.config  model.sdf
models/aruco_box_2/materials/scripts/: marker.material
models/aruco_box_3/: model.config  model.sdf
models/aruco_box_3/materials/scripts/: marker.material
models/aruco_box_4/: model.config  model.sdf
models/aruco_box_4/materials/scripts/: marker.material
results/: cppcheck.txt  cpplint.txt
rviz/: artemis.rviz
src/: artemis_node.cpp  aruco_detector.cpp  main.cpp  move_base_action_wrapper.cpp  navigator.cpp  pick_and_place.cpp  task_action_client.cpp  task_action_server.cpp  task_server_node.cpp  wms_server_node.cpp  wms_service_client.cpp  wms_service_server.cpp
srv/: WMSTask.srv
test/: artemis_test.cpp  artemis_test.test
worlds/: small_warehouse.world
