<?xml version="1.0"?>
<package format="2">
  <name>Artemis</name>
  <version>0.0.0</version>
  <description>The Artemis package</description>
  
  <maintainer email="tanuj@umd.edu">tanujthakkar</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>move_base</exec_depend>

  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <build_depend>fiducial_msgs</build_depend>
  <build_export_depend>fiducial_msgs</build_export_depend>
  <exec_depend>fiducial_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <export>

  </export>
</package>
